--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ dev = [
 ]
 docs = [
     "sphinx-autoapi~=3.6.0",
-    "python-docs-theme~=2025.12"
+    "python-docs-theme~=2025.12",
 ]
 
 [tool.poetry]
