--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -2,6 +2,10 @@
 #    uv export --only-group docs --no-hashes
 alabaster==1.0.0 ; python_full_version >= '3.12'
     # via sphinx
+anyio==4.12.0 ; python_full_version >= '3.12'
+    # via
+    #   starlette
+    #   watchfiles
 astroid==4.0.2 ; python_full_version >= '3.12'
     # via sphinx-autoapi
 babel==2.17.0 ; python_full_version >= '3.12'
@@ -10,12 +14,21 @@ certifi==2025.11.12 ; python_full_version >= '3.12'
     # via requests
 charset-normalizer==3.4.4 ; python_full_version >= '3.12'
     # via requests
-colorama==0.4.6 ; python_full_version >= '3.12' and sys_platform == 'win32'
+click==8.3.1 ; python_full_version >= '3.12'
+    # via uvicorn
+colorama==0.4.6 ; python_full_version >= '3.12'
+    # via
+    #   click
+    #   sphinx
+    #   sphinx-autobuild
+docutils==0.22.4 ; python_full_version >= '3.12'
     # via sphinx
-docutils==0.22.3 ; python_full_version >= '3.12'
-    # via sphinx
+h11==0.16.0 ; python_full_version >= '3.12'
+    # via uvicorn
 idna==3.11 ; python_full_version >= '3.12'
-    # via requests
+    # via
+    #   anyio
+    #   requests
 imagesize==1.4.1 ; python_full_version >= '3.12'
     # via sphinx
 jinja2==3.1.6 ; python_full_version >= '3.12'
@@ -41,7 +54,9 @@ sphinx==9.0.4 ; python_full_version >= '3.12'
     # via
     #   python-docs-theme
     #   sphinx-autoapi
+    #   sphinx-autobuild
 sphinx-autoapi==3.6.1 ; python_full_version >= '3.12'
+sphinx-autobuild==2025.8.25 ; python_full_version >= '3.12'
 sphinxcontrib-applehelp==2.0.0 ; python_full_version >= '3.12'
     # via sphinx
 sphinxcontrib-devhelp==2.0.0 ; python_full_version >= '3.12'
@@ -54,5 +69,17 @@ sphinxcontrib-qthelp==2.0.0 ; python_full_version >= '3.12'
     # via sphinx
 sphinxcontrib-serializinghtml==2.0.0 ; python_full_version >= '3.12'
     # via sphinx
+starlette==0.50.0 ; python_full_version >= '3.12'
+    # via sphinx-autobuild
+typing-extensions==4.15.0 ; python_full_version == '3.12.*'
+    # via
+    #   anyio
+    #   starlette
 urllib3==2.6.2 ; python_full_version >= '3.12'
     # via requests
+uvicorn==0.38.0 ; python_full_version >= '3.12'
+    # via sphinx-autobuild
+watchfiles==1.1.1 ; python_full_version >= '3.12'
+    # via sphinx-autobuild
+websockets==15.0.1 ; python_full_version >= '3.12'
+    # via sphinx-autobuild
