--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["uv_build"]
+build-backend = "uv_build"
 
 [project]
 name = "free-threading"
@@ -8,9 +8,8 @@ version = "1.0.4"
 description = "Thread-first true parallelism"
 license = "MIT"
 readme = "README.md"
-authors = [
-    { name = "Iskander Gaba", email = "iskander@hey.com" },
-]
+authors = [{ name = "Iskander Gaba", email = "iskander@hey.com" }]
+requires-python = ">=3.10"
 keywords = [
     "gil",
     "nogil",
@@ -24,11 +23,19 @@ keywords = [
     "concurrency",
     "parallelism",
 ]
-requires-python = ">=3.10"
+classifiers = [
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.14",
+]
 
 [project.urls]
-repository = "https://github.com/iskandergaba/free-threading"
-documentation = "https://freethreading.readthedocs.io"
+Documentation = "https://freethreading.readthedocs.io"
+Repository = "https://github.com/iskandergaba/free-threading"
 
 [dependency-groups]
 dev = [
@@ -43,8 +50,8 @@ docs = [
     "sphinx-autobuild~=2025.8.0",
 ]
 
-[tool.poetry]
-packages = [{ include = "freethreading", from = "src" }]
+[tool.uv.build-backend]
+module-name = "freethreading"
 
 [tool.uv.dependency-groups]
 docs = { requires-python = ">=3.12" }
