--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "free-threading"
 version = "1.0.4"
 description = "Thread-first true parallelism"
 license = "MIT"
-readme = "README.rst"
+readme = "README.md"
 authors = [{ name = "Iskander Gaba", email = "iskander@hey.com" }]
 requires-python = ">=3.10"
 keywords = [
