Tweak ruff linting in ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,12 +31,11 @@ jobs:
       - name: Install dependencies
         run: uv sync
 
+      - name: Check line length violations with ruff
+        run: uv run ruff check --select=E501 --exit-zero
+
       - name: Lint with ruff
-        run: |
-          # Stop the build if the ruff check fails, except for line length check (E501)
-          uv run ruff check --ignore=E501
-          # Show line length violation warnings
-          uv run ruff check --exit-zero
+        run: uv run ruff check --ignore=E501
 
       - name: Run tests
         run: uv run pytest --cov
